[package]
name = "map_model"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
aabb-quadtree = "0.1.0"
abstutil = { path = "../abstutil" }
derivative = "1.0.0"
geom = { path = "../geom" }
gtfs = { path = "../gtfs" }
nbez = "0.1.0"
ordered-float = "1.0.1"
pretty_assertions = "0.6.1"
rust_ch = { path = "/home/dabreegster/rust_ch" }
serde = "1.0.89"
serde_derive = "1.0.89"
